--- a/public/work.html
+++ b/public/work.html
@@ -62,7 +62,7 @@
                 </a>
             </div>
             <div class="item">
-                <img src="img/project2.jpg" alt="proje&nbsp;ct">
+                <img src="img/project2.JPG" alt="proje&nbsp;ct">
                 <a href="#" class="btn-light" >
                     <i class="fas fa-eye">&nbsp;ReactJs - Weather application</i>
                 </a>
@@ -71,7 +71,7 @@
                 </a>
             </div>
             <div class="item">
-                <img src="img/project3.jpg" alt="project">
+                <img src="img/project3.JPG" alt="project">
                 <a href="#" class="btn-light">
                     <i class="fas fa-eye">&nbsp;Animated leaves using sass functions</i>
                 </a>
