--- a/public/contact.html
+++ b/public/contact.html
@@ -18,28 +18,24 @@
             <div class="btn-line"></div>
             <div class="btn-line"></div>
         </div>
-        <a class="home-icon" href="index.html"><i class="fas fa-home fa-2x"></i></a>
     </header>
 
     <nav class="menu">
-        <div class="menu-branding">
-            <div class="potfolio"></div>
-        </div>
         <ul class="menu-nav">
             <li class="nav-item">
-                <a href="index.html" class="nav-link">
+                <a href="index.html" class="nav-link"><i class="fas fa-home"></i>
                     HOME</a>
             </li>
             <li class="nav-item">
-                <a href="about.html" class="nav-link ">
+                <a href="about.html" class="nav-link"><i class="fas fa-user-circle"></i>
                     About Me</a>
             </li>
             <li class="nav-item">
-                <a href="work.html" class="nav-link">
+                <a href="work.html" class="nav-link"><i class="fas fa-briefcase"></i>
                     My Work</a>
             </li>
             <li class="nav-item">
-                <a href="contact.html" class="nav-link active">
+                <a href="contact.html" class="nav-link active"><i class="fas fa-phone-square"></i>
                     How to Reach Me</a>
             </li>
         </ul>
