--- a/public/index.html
+++ b/public/index.html
@@ -21,24 +21,21 @@
     </header>
 
     <nav class="menu">
-        <div class="menu-branding">
-            <div class="potfolio"></div>
-        </div>
         <ul class="menu-nav">
             <li class="nav-item">
-                <a href="index.html" class="nav-link active">
+                <a href="index.html" class="nav-link active"><i class="fas fa-home"></i>
                     HOME</a>
             </li>
             <li class="nav-item">
-                <a href="about.html" class="nav-link">
+                <a href="about.html" class="nav-link"><i class="fas fa-user-circle"></i>
                     About Me</a>
             </li>
             <li class="nav-item">
-                <a href="work.html" class="nav-link">
+                <a href="work.html" class="nav-link"><i class="fas fa-briefcase"></i>
                     My Work</a>
             </li>
             <li class="nav-item">
-                <a href="contact.html" class="nav-link">
+                <a href="contact.html" class="nav-link"><i class="fas fa-phone-square"></i>
                     How to Reach Me</a>
             </li>
         </ul>
