--- a/public/work.html
+++ b/public/work.html
@@ -18,28 +18,24 @@
             <div class="btn-line"></div>
             <div class="btn-line"></div>
         </div>
-        <a class="home-icon" href="index.html"><i class="fas fa-home fa-2x"></i></a>
     </header>
 
-    <nav class="menu">
-        <div class="menu-branding">
-            <div class="potfolio"></div>
-        </div>
+   <nav class="menu">
         <ul class="menu-nav">
             <li class="nav-item">
-                <a href="index.html" class="nav-link">
+                <a href="index.html" class="nav-link"><i class="fas fa-home"></i>
                     HOME</a>
             </li>
             <li class="nav-item">
-                <a href="about.html" class="nav-link">
+                <a href="about.html" class="nav-link"><i class="fas fa-user-circle"></i>
                     About Me</a>
             </li>
             <li class="nav-item">
-                <a href="work.html" class="nav-link active">
+                <a href="work.html" class="nav-link active"><i class="fas fa-briefcase"></i>
                     My Work</a>
             </li>
             <li class="nav-item">
-                <a href="contact.html" class="nav-link">
+                <a href="contact.html" class="nav-link"><i class="fas fa-phone-square"></i>
                     How to Reach Me</a>
             </li>
         </ul>
@@ -54,7 +50,7 @@
         <div class="projects">
             <div class="item">
                 <img src="img/project1.JPG" alt="project">
-                <a href="#" class="btn-light">
+                <a href="https://radiant-ocean-86624.herokuapp.com/index.html" class="btn-light">
                     <i class="fas fa-eye">&nbsp;My First Project with Sass</i>
                 </a>
                 <a href="https://github.com/dhruvimak/SASS_IMPLEMENTATION" class="btn-dark" target="_blank">
@@ -72,7 +68,7 @@
             </div>
             <div class="item">
                 <img src="img/project3.JPG" alt="project">
-                <a href="#" class="btn-light">
+                <a href="https://floating-cove-82145.herokuapp.com/" class="btn-light">
                     <i class="fas fa-eye">&nbsp;Animated leaves using sass functions</i>
                 </a>
                 <a href="https://github.com/dhruvimak/Awsome-CSS" class="btn-dark" target="_blank">
