--- a/public/about.html
+++ b/public/about.html
@@ -53,6 +53,10 @@
                 <h3 class="secondary-text">BIO</h3>
                 <p>Versatile Front-end Developer with 2+ years of experience in designing, developing and managing complex web applications. Specializes in HTML5, SCSS, CSS3, Bootstap and Angular4/6.
                 </p>
+                <br/>
+                <h3 class="secondary-text">Key Skills</h3>
+                <p>HTML5, CSS3, JavaScript, Core JAVA, MYSQL ,Angular4, Bootstrap, SASS
+                </p>
             </div>
 
             <div class="job job-1">
