--- a/public/work.html
+++ b/public/work.html
@@ -59,7 +59,7 @@
             </div>
             <div class="item">
                 <img src="img/project2.JPG" alt="proje&nbsp;ct">
-                <a href="#" class="btn-light" >
+                <a href="https://fast-ravine-51424.herokuapp.com/" class="btn-light" >
                     <i class="fas fa-eye">&nbsp;ReactJs - Weather application</i>
                 </a>
                 <a href="https://github.com/dhruvimak/ReactJs---Weather-application" class="btn-dark" target="_blank">
