--- a/public/about.html
+++ b/public/about.html
@@ -55,7 +55,7 @@
                 </p>
                 <br/>
                 <h3 class="secondary-text">Key Skills</h3>
-                <p>HTML5, CSS3, JavaScript, Core JAVA, MYSQL ,Angular4, Bootstrap, SASS
+                <p>Angular4/6, Bootstrap4, SASS, HTML5, CSS3, Typescript, JavaScript,  Core JAVA, MYSQL
                 </p>
             </div>
 
