--- a/public/work.html
+++ b/public/work.html
@@ -20,22 +20,26 @@
         </div>
     </header>
 
-   <nav class="menu">
+    <nav class="menu">
         <ul class="menu-nav">
             <li class="nav-item">
-                <a href="index.html" class="nav-link"><i class="fas fa-home"></i>
+                <a href="index.html" class="nav-link">
+                    <i class="fas fa-home"></i>
                     HOME</a>
             </li>
             <li class="nav-item">
-                <a href="about.html" class="nav-link"><i class="fas fa-user-circle"></i>
+                <a href="about.html" class="nav-link">
+                    <i class="fas fa-user-circle"></i>
                     About Me</a>
             </li>
             <li class="nav-item">
-                <a href="work.html" class="nav-link active"><i class="fas fa-briefcase"></i>
+                <a href="work.html" class="nav-link active">
+                    <i class="fas fa-briefcase"></i>
                     My Work</a>
             </li>
             <li class="nav-item">
-                <a href="contact.html" class="nav-link"><i class="fas fa-phone-square"></i>
+                <a href="contact.html" class="nav-link">
+                    <i class="fas fa-phone-square"></i>
                     How to Reach Me</a>
             </li>
         </ul>
@@ -49,9 +53,18 @@
 
         <div class="projects">
             <div class="item">
+                <img src="img/SSOAuth.JPG" alt="project">
+                <a href="https://ssoauthentication.herokuapp.com/" class="btn-light" target="_blank">
+                    <i class="fas fa-eye">&nbsp;Single Sign On Authentication</i>
+                </a>
+                <a href="https://github.com/dhruvimak/firebase-social-authentication-app" class="btn-dark" target="_blank">
+                    <i class="fab fa-github">&nbsp;Github</i>
+                </a>
+            </div>
+            <div class="item">
                 <img src="img/project1.JPG" alt="project">
-                <a href="https://radiant-ocean-86624.herokuapp.com/index.html" class="btn-light">
-                    <i class="fas fa-eye">&nbsp;My First Project with Sass</i>
+                <a href="https://radiant-ocean-86624.herokuapp.com/index.html" class="btn-light" target="_blank">
+                    <i class="fas fa-eye">&nbsp;Business Website with Sass</i>
                 </a>
                 <a href="https://github.com/dhruvimak/SASS_IMPLEMENTATION" class="btn-dark" target="_blank">
                     <i class="fab fa-github">&nbsp;Github</i>
@@ -59,7 +72,7 @@
             </div>
             <div class="item">
                 <img src="img/project2.JPG" alt="proje&nbsp;ct">
-                <a href="https://fast-ravine-51424.herokuapp.com/" class="btn-light" >
+                <a href="https://fast-ravine-51424.herokuapp.com/" class="btn-light" target="_blank">
                     <i class="fas fa-eye">&nbsp;ReactJs - Weather application</i>
                 </a>
                 <a href="https://github.com/dhruvimak/ReactJs---Weather-application" class="btn-dark" target="_blank">
@@ -68,31 +81,13 @@
             </div>
             <div class="item">
                 <img src="img/project3.JPG" alt="project">
-                <a href="https://floating-cove-82145.herokuapp.com/" class="btn-light">
+                <a href="https://floating-cove-82145.herokuapp.com/" class="btn-light" target="_blank">
                     <i class="fas fa-eye">&nbsp;Animated leaves using sass functions</i>
                 </a>
                 <a href="https://github.com/dhruvimak/Awsome-CSS" class="btn-dark" target="_blank">
                     <i class="fab fa-github">&nbsp;Github</i>
                 </a>
             </div>
-            <!-- <div class="item">
-                <img src="img/portrait.jpg" alt="project">
-                <a href="#" class="btn-light">
-                    <i class="fas fa-eye">&nbsp;Project</i>
-                </a>
-                <a href="#" class="btn-dark">
-                    <i class="fab fa-github">&nbsp;Github</i>
-                </a>
-            </div> -->
-            <!-- <div class="item">
-                <img src="img/portrait.jpg" alt="project">
-                <a href="#" class="btn-light">
-                    <i class="fas fa-eye">&nbsp;Project</i>
-                </a>
-                <a href="#" class="btn-dark">
-                    <i class="fab fa-github">&nbsp;Github</i>
-                </a>
-            </div> -->
         </div>
     </main>
 
