--- a/about.html
+++ b/about.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/assets/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
         crossorigin="anonymous">
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="assets/css/main.css">
     <title>About Me</title>
 </head>
 
@@ -36,7 +36,7 @@
             </li>
             <li class="nav-item">
                 <a href="contact.html" class="nav-link"><i class="fas fa-phone-square"></i>
-                    How to Reach Me</a>
+                    Reach Me</a>
             </li>
         </ul>
     </nav>
@@ -48,7 +48,7 @@
         <h2 class="sm-heading">Let me tell you a few things...</h2>
 
         <div class="about-info">
-            <img src="img/portrait.jpg" alt="Dhruvi Makvana" class="bio-image" />
+            <img src="assets/img/portrait.jpg" alt="Dhruvi Makvana" class="bio-image" />
             <div class="bio">
                 <h3 class="secondary-text">BIO</h3>
                 <p>Versatile Front-end Developer with 2+ years of experience in designing, developing and managing complex web applications. Specializes in HTML5, SCSS, CSS3, Bootstap and Angular4/6.
