--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
         crossorigin="anonymous">
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="assets/css/main.css">
     <title>Welcome to My Portfolio</title>
 </head>
 
@@ -36,24 +36,20 @@
             </li>
             <li class="nav-item">
                 <a href="contact.html" class="nav-link"><i class="fas fa-phone-square"></i>
-                    How to Reach Me</a>
+                    Reach Me</a>
             </li>
         </ul>
     </nav>
 
     <main id="home">
-        <h1 class="lg-heading">Dhruvi
-            <span class="secondary-text">Makvana</span>
-        </h1>
-        <h2 class="sm-heading">Web Devloper</h2>
+        <h2 class="lg-heading"><span class="pre-heading">Hi, I am </span>Dhruvi <span class="secondary-text">Makvana</span>
+        </h2>
+        <h2 class="sm-heading">Web Devloper / Front&nbsp;end&nbsp;Developer</h2>
+        <h3 class="sm-description">I design/develop static, dynamic, and SPA web applications that provide a seamless user experience.
+            <p>Highly skilled and have 5 years experience in developing complex and responsive web applications in multiple business domains like E-commerce, Hospitality, and Supply chain.</p>
+        </h3>
         <div class="icons">
-            <a href="https://twitter.com/makvana_dhruvi" target="_blank">
-                <i class="fab fa-twitter fa-2x"></i>
-            </a>
-            <a href="https://www.facebook.com/dhruvi.makavana" target="_blank">
-                <i class="fab fa-facebook fa-2x"></i>
-            </a>
-            <a href="https://www.linkedin.com/in/dhruvi-makvana-296a40a3/" target="_blank">
+           <a href="https://www.linkedin.com/in/dhruvi-makvana-296a40a3/" target="_blank">
                 <i class="fab fa-linkedin fa-2x"></i>
             </a>
             <a href="https://github.com/dhruvimak" target="_blank">
@@ -62,9 +58,12 @@
             <a href="mailto:dhruvipmakavana@yahoo.com" target="_blank">
                 <i class="far fa-envelope fa-2x"></i>
             </a>
+            <a href="https://stackoverflow.com/users/10118050/dhruvi-makvana" target="_blank">
+                <i class="fab fa-stack-overflow fa-2x"></i>
+            </a>
         </div>
     </main>
 </body>
-<script src="js/main.js"></script>
+<script src="assets/js/main.js"></script>
 
 </html>
