--- a/work.html
+++ b/work.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/assets/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
         crossorigin="anonymous">
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="assets/css/main.css">
     <title>View My Work</title>
 </head>
 
@@ -40,7 +40,7 @@
             <li class="nav-item">
                 <a href="contact.html" class="nav-link">
                     <i class="fas fa-phone-square"></i>
-                    How to Reach Me</a>
+                    Reach Me</a>
             </li>
         </ul>
     </nav>
@@ -53,7 +53,7 @@
 
         <div class="projects">
             <div class="item">
-                <img src="img/SSOAuth.JPG" alt="project">
+                <img src="assets/img/SSOAuth.JPG" alt="project">
                 <a href="https://ssoauthentication.herokuapp.com/" class="btn-light" target="_blank">
                     <i class="fas fa-eye">&nbsp;Single Sign On Authentication</i>
                 </a>
@@ -62,7 +62,7 @@
                 </a>
             </div>
             <div class="item">
-                <img src="img/project1.JPG" alt="project">
+                <img src="assets/img/project1.JPG" alt="project">
                 <a href="https://radiant-ocean-86624.herokuapp.com/index.html" class="btn-light" target="_blank">
                     <i class="fas fa-eye">&nbsp;Business Website with Sass</i>
                 </a>
@@ -71,7 +71,7 @@
                 </a>
             </div>
             <div class="item">
-                <img src="img/project2.JPG" alt="proje&nbsp;ct">
+                <img src="assets/img/project2.JPG" alt="proje&nbsp;ct">
                 <a href="https://fast-ravine-51424.herokuapp.com/" class="btn-light" target="_blank">
                     <i class="fas fa-eye">&nbsp;ReactJs - Weather application</i>
                 </a>
@@ -80,7 +80,7 @@
                 </a>
             </div>
             <div class="item">
-                <img src="img/project3.JPG" alt="project">
+                <img src="assets/img/project3.JPG" alt="project">
                 <a href="https://floating-cove-82145.herokuapp.com/" class="btn-light" target="_blank">
                     <i class="fas fa-eye">&nbsp;Animated leaves using sass functions</i>
                 </a>
