--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/assets/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
         crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/main.css">
     <title>About Me</title>
@@ -45,40 +45,59 @@
         <h1 class="lg-heading">About
             <span class="secondary-text">Me</span>
         </h1>
-        <h2 class="sm-heading">Let me tell you a few things...</h2>
+        <h2 class="sm-heading"></h2>
 
         <div class="about-info">
-            <img src="assets/img/portrait.jpg" alt="Dhruvi Makvana" class="bio-image" />
             <div class="bio">
-                <h3 class="secondary-text">BIO</h3>
-                <p>Versatile Front-end Developer with 2+ years of experience in designing, developing and managing complex web applications. Specializes in HTML5, SCSS, CSS3, Bootstap and Angular4/6.
+                <p>Versatile Front-end Developer with 5 years of experience in designing, developing, and managing complex web applications.
+                    Excited to try different technology and Highly Passionate about developing responsive and efficient websites.
                 </p>
                 <br/>
-                <h3 class="secondary-text">Key Skills</h3>
-                <p>Angular4/6, Bootstrap4, SASS, HTML5, CSS3, Typescript, JavaScript,  Core JAVA, MYSQL
+                <h3 class="secondary-text">Technical Skills</h3>
+                <p>JavaScript • ReactJs • Redux • HTML5 • CSS3• Bootstrap • Webpack • Enzyme • Jest Responsive Web Design
+                </p>
+                <h3 class="secondary-text">Tools</h3>
+                <p>CSS Preprocessors • Jenkins RESTful Services/APIs • GIT • JIRA
                 </p>
             </div>
-
             <div class="job job-1">
+                <img src="/assets/img/Walmart-Logo.png" height="50"/>
+                <h3>WALMART GLOBAL TECH INDIA</h3>
+                <h4>SDE-3</h4>
+                <h4>Apr 2020 – Present</h4>
+                <a href="https://groceries.asda.com/">ASDA Groceries: An online grocery shopping platform</a>
+            </div>
+
+            <div class="job job-2">
+                <img src="/assets/img/oyo.png" height="50"/>
+                <h3>OYO VACATION HOMES</h3>
+                <h4>WDE - 1</h4>
+                <h4>Oct 2019 – March 2020</h4>
+                <a href="https://www.belvilla.com/">Belvilla Vacation Homes</a>
+            </div>
+
+            <div class="job job-3">
+                <img src="/assets/img/accenture.png" height="50"/>
+                <h3>ACCENTURE</h3>
+                <h4>Associate Software Engineer</h4>
+                <h4>June 2018 – April 2019</h4>
+                <p>Crunch Metrics, a fully automated tool to detect ananomaly,enables error-free handling of large and complex data sets, and real-time detection and alerting.</p>
+            </div>
+
+            <div class="job job-4">
+                <img src="/assets/img/accenture.png" height="50"/>
+                <h3>ACCENTURE</h3>
+                <h4>SOFTWARE ENGINEER</h4>
+                <p>Postal Web applications
+                </br>
+                Supply Chain Solution</p>
+            </div>
+
+            <div class="job job-6">
+                <br/>
+                <br/>
                 <h3>FREELANCER</h3>
                 <h4>01-JULY-2016 - 01-NOV-2016</h4>
-                <h4>&nbsp;</h4>
-                
-                <p>Build a shopping website for a client working as a freelancer. The website included various services like user-based login/logout, catalog listing, product search.
-                    The website was built using the latest CSS preprocessors SASS Engine.
-                    </p>
-            </div>
-            <div class="job job-2">
-                <h3>ASSOCIATE SOFTWARE ENGINEER</h3>
-                <h4>ACCENTURE</h4>
-                <h4>01-FEB-2017 - 31-MAY-2018</h4>
-                <p>Have worked on multiple client projects and POCs, extensively using Bootstrap4, SASS ,JavaScript and Angular2.</p>
-            </div>
-            <div class="job job-3">
-                <h3>SOFTWARE ENGINEER</h3>
-                <h4>ACCENTURE</h4>
-                <h4401-JUN-2018 - PRESENT DATE</h4>
-                <p>Working on POCs for client with Angular 4/6.</p>
             </div>
         </div>
     </main>
@@ -87,6 +106,6 @@
         Copyright &copy; Dhruvi Makvana 2018.All rights reserved.
     </footer>
 </body>
-<script src="js/main.js"></script>
+<script src="assets/js/main.js"></script>
 
 </html>
