work and contact page

--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/assets/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
         crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/main.css">
     <title>Contact Me</title>
@@ -56,12 +56,12 @@
 
             <div>
                 <span class="secondary-text">Phone : </span>
-                8734943662
+                +91 8734943662
             </div>
 
             <div>
                 <span class="secondary-text">Location : </span>
-                Ecospace, Banglore
+                Banglore, India
             </div>
         </div>
     </main>
@@ -70,6 +70,6 @@
         Copyright &copy; Dhruvi Makvana 2018.All rights reserved.
     </footer>
 </body>
-<script src="js/main.js"></script>
+<script src="assets/js/main.js"></script>
 
 </html>
