--- a/work.html
+++ b/work.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/assets/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
         crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/main.css">
     <title>View My Work</title>
@@ -64,7 +64,7 @@
             <div class="item">
                 <img src="assets/img/project1.JPG" alt="project">
                 <a href="https://radiant-ocean-86624.herokuapp.com/index.html" class="btn-light" target="_blank">
-                    <i class="fas fa-eye">&nbsp;Business Website with Sass</i>
+                    <i class="fas fa-eye">&nbsp;Website Template</i>
                 </a>
                 <a href="https://github.com/dhruvimak/SASS_IMPLEMENTATION" class="btn-dark" target="_blank">
                     <i class="fab fa-github">&nbsp;Github</i>
@@ -73,7 +73,7 @@
             <div class="item">
                 <img src="assets/img/project2.JPG" alt="proje&nbsp;ct">
                 <a href="https://fast-ravine-51424.herokuapp.com/" class="btn-light" target="_blank">
-                    <i class="fas fa-eye">&nbsp;ReactJs - Weather application</i>
+                    <i class="fas fa-eye">&nbsp;Weather application</i>
                 </a>
                 <a href="https://github.com/dhruvimak/ReactJs---Weather-application" class="btn-dark" target="_blank">
                     <i class="fab fa-github">&nbsp;Github</i>
@@ -82,7 +82,7 @@
             <div class="item">
                 <img src="assets/img/project3.JPG" alt="project">
                 <a href="https://floating-cove-82145.herokuapp.com/" class="btn-light" target="_blank">
-                    <i class="fas fa-eye">&nbsp;Animated leaves using sass functions</i>
+                    <i class="fas fa-eye">&nbsp;Fun with css animation</i>
                 </a>
                 <a href="https://github.com/dhruvimak/Awsome-CSS" class="btn-dark" target="_blank">
                     <i class="fab fa-github">&nbsp;Github</i>
@@ -95,6 +95,6 @@
         Copyright &copy; Dhruvi Makvana 2018.All rights reserved.
     </footer>
 </body>
-<script src="js/main.js"></script>
+<script src="assets/js/main.js"></script>
 
 </html>
