--- a/work.html
+++ b/work.html
@@ -92,7 +92,7 @@
     </main>
 
     <footer id="main-footer">
-        Copyright &copy; Dhruvi Makvana 2018.All rights reserved.
+        Copyright &copy; Dhruvi Makvana <span id="currentYear"></span>.All rights reserved.
     </footer>
 </body>
 <script src="assets/js/main.js"></script>
