one page git push origin HEAD

--- a/index.html
+++ b/index.html
@@ -5,47 +5,63 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="description" content="React developer, Web Developer">
+    <meta name="keyword" content="Makvana Dhruvi, Dhruvi Makvana, Makd, Makavana, Dhruvi, Makwana">
+    <meta name="keyword" content="portfolio, javascript, developer">
+    <meta name="keyword" content="web design and developments services">
+    <meta name="keyword" content="custom web design services">
+    <meta name="keyword" content="web design services">
+    <meta name="keyword" content="affordable website design">
+    <meta name="keyword" content="cheap website design">
+    <meta name="keyword" content="freelance web designer">
+    <meta name="keyword" content="responsive web designer">
+    <meta name="keyword" content="professional web designer">
+    <meta property="og:title" content="Dhruvi Makvana | Front End Web Developer"/>
+    <meta property="og:description" content="JavaScript, React Developer, Front end Developer" />
+    <meta property="og:image" content="https://makd.me/assets/img/businesscard.png"/>
+    <meta property="og:url" content="http://makd.me" />
+    <meta property="og:type" content="website" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
         crossorigin="anonymous">
+    <link rel="stylesheet" href="assets/css/businesscard.css">
     <link rel="stylesheet" href="assets/css/main.css">
-    <title>Welcome to My Portfolio</title>
+    <title>Dhruvi Makvana</title>
 </head>
 
 <body id="bg-image">
-    <header>
-        <div class="menu-btn">
-            <div class="btn-line"></div>
-            <div class="btn-line"></div>
-            <div class="btn-line"></div>
-        </div>
-    </header>
+    <div class="navbar">
+        <a href="#" class="nav-link active"><i class="fas fa-home"></i><span>&nbsp;HOME</span></a>
+        <a href="#about" class="nav-link"><i class="fas fa-user-circle"></i><span>&nbsp;About Me</span></a>
+        <a href="#work" class="nav-link"><i class="fas fa-briefcase"></i><span>&nbsp;My Work</span></a>
+        <a href="#contact" class="nav-link"><i class="fas fa-phone-square"></i><span>&nbsp;Reach Me</span></a>
+    </div>
 
-    <nav class="menu">
+    <!-- <nav class="menu">
         <ul class="menu-nav">
             <li class="nav-item">
-                <a href="index.html" class="nav-link active"><i class="fas fa-home"></i>
+                <a href="#" class="nav-link active"><i class="fas fa-home"></i>
                     HOME</a>
             </li>
             <li class="nav-item">
-                <a href="about.html" class="nav-link"><i class="fas fa-user-circle"></i>
+                <a href="#about" class="nav-link"><i class="fas fa-user-circle"></i>
                     About Me</a>
             </li>
             <li class="nav-item">
-                <a href="work.html" class="nav-link"><i class="fas fa-briefcase"></i>
+                <a href="#work" class="nav-link"><i class="fas fa-briefcase"></i>
                     My Work</a>
             </li>
             <li class="nav-item">
-                <a href="contact.html" class="nav-link"><i class="fas fa-phone-square"></i>
+                <a href="#contact" class="nav-link"><i class="fas fa-phone-square"></i>
                     Reach Me</a>
             </li>
         </ul>
-    </nav>
+    </nav> -->
 
     <main id="home">
-        <h2 class="lg-heading"><span class="pre-heading">Hi, I am </span>Dhruvi <span class="secondary-text">Makvana</span>
+        <h2 class="lg-heading"><span class="pre-heading italic">Hi, I am </span>Dhruvi <span class="secondary-text">Makvana</span>
         </h2>
-        <h2 class="sm-heading">Web Devloper / Front&nbsp;end&nbsp;Developer</h2>
-        <h3 class="sm-description">I design/develop static, dynamic, and SPA web applications that provide a seamless user experience.
+        <h2 class="sm-heading">Web Developer / Front&nbsp;end&nbsp;Developer</h2>
+        <h3 class="sm-description italic">I design/develop static, dynamic, and SPA web applications that provide a seamless user experience.
             <p>Highly skilled and have 5 years experience in developing complex and responsive web applications in multiple business domains like E-commerce, Hospitality, and Supply chain.</p>
         </h3>
         <div class="icons">
@@ -63,7 +79,162 @@
             </a>
         </div>
     </main>
-</body>
-<script src="assets/js/main.js"></script>
 
+    <main id="about">
+        <h1 class="lg-heading">About
+            <span class="secondary-text">Me</span>
+        </h1>
+        <h2 class="sm-heading"></h2>
+
+        <div class="about-info">
+            <div class="bio">
+                <p>Versatile Front-end Developer with 5 years of experience in designing, developing, and managing complex web applications.
+                    Excited to try different technology and Highly Passionate about developing responsive and efficient websites.
+                </p>
+                <br/>
+                <h3 class="secondary-text">Technical Skills</h3>
+                <p>JavaScript • ReactJs • Redux • HTML5 • CSS3• Bootstrap • Webpack • Enzyme • Jest Responsive Web Design
+                </p>
+                <h3 class="secondary-text">Tools</h3>
+                <p>CSS Preprocessors • Jenkins RESTful Services/APIs • GIT • JIRA
+                </p>
+            </div>
+            <div class="job job-1">
+                <img src="/assets/img/Walmart-Logo.png" alt="walmart logo" height="50"/>
+                <h3>WALMART GLOBAL TECH INDIA</h3>
+                <h4>SDE-3</h4>
+                <h4>Apr 2020 – Present</h4>
+                <a href="https://groceries.asda.com/">ASDA Groceries: An online grocery shopping platform</a>
+            </div>
+
+            <div class="job job-2">
+                <img src="/assets/img/oyo.png" alt="oyo logo" height="50"/>
+                <h3>OYO VACATION HOMES</h3>
+                <h4>WDE - 1</h4>
+                <h4>Oct 2019 – March 2020</h4>
+                <a href="https://www.belvilla.com/">Belvilla Vacation Homes</a>
+            </div>
+
+            <div class="job job-3">
+                <img src="/assets/img/accenture.png" alt="accenture logo" height="50"/>
+                <h3>ACCENTURE</h3>
+                <h4>Associate Software Engineer</h4>
+                <h4>June 2018 – April 2019</h4>
+                <p>Crunch Metrics, a fully automated tool to detect ananomaly,enables error-free handling of large and complex data sets, and real-time detection and alerting.</p>
+            </div>
+
+            <div class="job job-4">
+                <img src="/assets/img/accenture.png" alt="accenture logo" height="50"/>
+                <h3>ACCENTURE</h3>
+                <h4>SOFTWARE ENGINEER</h4>
+                <p>Postal Web applications
+                </br>
+                Supply Chain Solution</p>
+            </div>
+
+            <div class="job job-6">
+                <br/>
+                <br/>
+                <h3>FREELANCER</h3>
+                <h4>01-JULY-2016 - 01-NOV-2016</h4>
+            </div>
+        </div>
+    </main>
+
+
+    <main id="work">
+        <h1 class="lg-heading">My
+            <span class="secondary-text">Work</span>
+        </h1>
+        <h2 class="sm-heading">Check out some of my projects....</h2>
+
+        <div class="projects">
+            <div class="item">
+                <img src="assets/img/SSOAuth.JPG" alt="sso auth project">
+                <a href="https://ssoauthentication.herokuapp.com/" class="btn-light" target="_blank">
+                    <i class="fas fa-eye">&nbsp;Single Sign On Authentication</i>
+                </a>
+                <a href="https://github.com/dhruvimak/firebase-social-authentication-app" class="btn-dark" target="_blank">
+                    <i class="fab fa-github">&nbsp;Github</i>
+                </a>
+            </div>
+            <div class="item">
+                <img src="assets/img/project1.JPG" alt="website Template">
+                <a href="https://radiant-ocean-86624.herokuapp.com/index.html" class="btn-light" target="_blank">
+                    <i class="fas fa-eye">&nbsp;Website Template</i>
+                </a>
+                <a href="https://github.com/dhruvimak/SASS_IMPLEMENTATION" class="btn-dark" target="_blank">
+                    <i class="fab fa-github">&nbsp;Github</i>
+                </a>
+            </div>
+            <div class="item">
+                <img src="assets/img/project2.JPG" alt="Weather application">
+                <a href="https://fast-ravine-51424.herokuapp.com/" class="btn-light" target="_blank">
+                    <i class="fas fa-eye">&nbsp;Weather application</i>
+                </a>
+                <a href="https://github.com/dhruvimak/ReactJs---Weather-application" class="btn-dark" target="_blank">
+                    <i class="fab fa-github">&nbsp;Github</i>
+                </a>
+            </div>
+            <div class="item">
+                <img src="assets/img/project3.JPG" alt="fun with css">
+                <a href="https://floating-cove-82145.herokuapp.com/" class="btn-light" target="_blank">
+                    <i class="fas fa-eye">&nbsp;Fun with css animation</i>
+                </a>
+                <a href="https://github.com/dhruvimak/Awsome-CSS" class="btn-dark" target="_blank">
+                    <i class="fab fa-github">&nbsp;Github</i>
+                </a>
+            </div>
+        </div>
+    </main>
+
+
+    <main id="contact">
+        <h1 class="lg-heading">Contact
+            <span class="secondary-text">Me</span>
+        </h1>
+        <h2 class="sm-heading">How you can reach me...</h2>
+
+        <div class="wrapper" ontouchstart="this.classList.toggle('hover');">
+            <div class="flipper">
+              <div class="card-front">
+                  <div class="logo">
+                      <img class="logo-img" src="/assets/img/name-logo.png" alt="Dhruvi Makvana">
+                </div>
+                <h2 class="name">DHRUVI MAKVANA</h2>
+                <h3 class="h3 about">Web Developer</h3>
+              </div>
+              <div class="card-back">
+                <h3 class="h3 contact-info"><a><i class="fas fa-phone-square">&nbsp;</i>+91 87349 43662</a></h3>
+                <h3 class="h3 contact-info"><a href="http://makd.me"><i class="fas fa-link">&nbsp;</i>makd.com</a></h3>
+                <h3 class="h3 contact-info"><a href="mailto:dhruvipmakavana@yahoo.com"><i class="fas fa-envelope"></i>&nbsp;dhruvipmakavana@yahoo.com</a></h3>
+                <h3 class="h3 contact-info"><a><i class="fas fa-map-marker-alt"></i>&nbsp;Bangalore, India</a></h3>
+              </div>
+            </div> 
+          </div> 
+          <div>
+            <p class="info">
+              Roll over the card for contact details.
+            </p>
+          </div>
+
+        <!-- <div class="boxes">
+
+            <div>
+                <span class="secondary-text">Email : </span>
+                dhruvipmakavana@yahoo.com
+            </div>
+
+            <div>
+                <span class="secondary-text">Phone : </span>
+                +91 8734943662
+            </div>
+
+            <div>
+                <span class="secondary-text">Location : </span>
+                Banglore, India
+            </div>
+        </div> -->
+    </main>
+</body>
 </html>
