link sharing preview git push origin HEAD

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <meta name="keyword" content="professional web designer">
     <meta property="og:title" content="Dhruvi Makvana | Front End Web Developer"/>
     <meta property="og:description" content="JavaScript, React Developer, Front end Developer" />
-    <meta property="og:image" content="https://makd.me/assets/img/businesscard.png"/>
+    <meta property="og:image" content="http://makd.me/assets/img/businesscard.png"/>
     <meta property="og:url" content="http://makd.me" />
     <meta property="og:type" content="website" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
