--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <meta property="og:image" content="http://makd.me/assets/img/businesscard.png"/>
     <meta property="og:url" content="http://makd.me" />
     <meta property="og:type" content="website" />
+    <link rel="canonical" href="http://makd.me"/>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
         crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/businesscard.css">
@@ -35,6 +36,27 @@
         <a href="#work" class="nav-link"><i class="fas fa-briefcase"></i><span>&nbsp;My Work</span></a>
         <a href="#contact" class="nav-link"><i class="fas fa-phone-square"></i><span>&nbsp;Reach Me</span></a>
     </div>
+
+    <!-- <nav class="menu">
+        <ul class="menu-nav">
+            <li class="nav-item">
+                <a href="#" class="nav-link active"><i class="fas fa-home"></i>
+                    HOME</a>
+            </li>
+            <li class="nav-item">
+                <a href="#about" class="nav-link"><i class="fas fa-user-circle"></i>
+                    About Me</a>
+            </li>
+            <li class="nav-item">
+                <a href="#work" class="nav-link"><i class="fas fa-briefcase"></i>
+                    My Work</a>
+            </li>
+            <li class="nav-item">
+                <a href="#contact" class="nav-link"><i class="fas fa-phone-square"></i>
+                    Reach Me</a>
+            </li>
+        </ul>
+    </nav> -->
 
     <main id="home">
         <h2 class="lg-heading"><span class="pre-heading italic">Hi, I am </span>Dhruvi <span class="secondary-text">Makvana</span>
