--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <meta name="keyword" content="freelance web designer">
     <meta name="keyword" content="responsive web designer">
     <meta name="keyword" content="professional web designer">
-    <meta property="og:title" content="Dhruvi Makvana | Front End Web Developer"/>
-    <meta property="og:description" content="JavaScript, React Developer, Front end Developer" />
+    <meta property="og:title" content="Dhruvi Makvana | Web Developer"/>
+    <meta property="og:description" content="Making Web AWESOME!" />
     <meta property="og:image" content="http://makd.me/assets/img/businesscard.png"/>
     <meta property="og:url" content="http://makd.me" />
     <meta property="og:type" content="website" />
@@ -36,28 +36,6 @@
         <a href="#work" class="nav-link"><i class="fas fa-briefcase"></i><span>&nbsp;My Work</span></a>
         <a href="#contact" class="nav-link"><i class="fas fa-phone-square"></i><span>&nbsp;Reach Me</span></a>
     </div>
-
-    <!-- <nav class="menu">
-        <ul class="menu-nav">
-            <li class="nav-item">
-                <a href="#" class="nav-link active"><i class="fas fa-home"></i>
-                    HOME</a>
-            </li>
-            <li class="nav-item">
-                <a href="#about" class="nav-link"><i class="fas fa-user-circle"></i>
-                    About Me</a>
-            </li>
-            <li class="nav-item">
-                <a href="#work" class="nav-link"><i class="fas fa-briefcase"></i>
-                    My Work</a>
-            </li>
-            <li class="nav-item">
-                <a href="#contact" class="nav-link"><i class="fas fa-phone-square"></i>
-                    Reach Me</a>
-            </li>
-        </ul>
-    </nav> -->
-
     <main id="home">
         <h2 class="lg-heading"><span class="pre-heading italic">Hi, I am </span>Dhruvi <span class="secondary-text">Makvana</span>
         </h2>
@@ -218,24 +196,10 @@
               Roll over the card for contact details.
             </p>
           </div>
-
-        <!-- <div class="boxes">
-
-            <div>
-                <span class="secondary-text">Email : </span>
-                dhruvipmakavana@yahoo.com
-            </div>
-
-            <div>
-                <span class="secondary-text">Phone : </span>
-                +91 8734943662
-            </div>
-
-            <div>
-                <span class="secondary-text">Location : </span>
-                Banglore, India
-            </div>
-        </div> -->
     </main>
+    <footer id="main-footer">
+        Copyright &copy; Dhruvi Makvana <span id="currentYear"></span>.All rights reserved.
+    </footer>
+    <script src="assets/js/main.js"></script>
 </body>
 </html>
