--- a/index.html
+++ b/index.html
@@ -72,10 +72,10 @@
                 </p>
                 <br/>
                 <h3 class="secondary-text">Technical Skills</h3>
-                <p>JavaScript • ReactJs • Redux • HTML5 • CSS3• Bootstrap • Webpack • Enzyme • Jest Responsive Web Design
+                <p>JavaScript • ReactJs • Redux • HTML5 • CSS3• Bootstrap • Webpack • Enzyme • Jest • Responsive Web Design
                 </p>
                 <h3 class="secondary-text">Tools</h3>
-                <p>CSS Preprocessors • Jenkins RESTful Services/APIs • GIT • JIRA
+                <p>CSS Preprocessors • Jenkins • RESTful Services/APIs • GIT • JIRA
                 </p>
             </div>
             <div class="job job-1">
