--- a/index.html
+++ b/index.html
@@ -84,6 +84,12 @@
                 <h4>SDE-3</h4>
                 <h4>Apr 2020 – Present</h4>
                 <a href="https://groceries.asda.com/">ASDA Groceries: An online grocery shopping platform</a>
+                <p>• Working on website’s performance optimisation, accessibility, code smells, test coverage and deployments.</p>
+<p>• Leadthedevelopmentoftheofferspageanddeliverypassfunctionality-which provides the same day delivery, early access to the home delivery slots and guaranteed savings.</p>
+<p>• Redesigned existing user interface, web application architecture in ReactJs, HTML and CSS/SASS.</p>
+      <p>      • Worked on the integration of Adobe/Omniture analytics.</p>
+   <p>     • Integrated multiple website pages/modules to new CMS tool.</p>
+<p>    • Worked and supported the migration from monolithic to micro-services API Architecture.</p>
             </div>
 
             <div class="job job-2">
@@ -92,6 +98,9 @@
                 <h4>WDE - 1</h4>
                 <h4>Oct 2019 – March 2020</h4>
                 <a href="https://www.belvilla.com/">Belvilla Vacation Homes</a>
+                <p>• Built a wish-list and bucket-list functionality, which can be shared via multiple channels.</p>
+<p>• Added a product comparison feature allowing a user to list/modify the comparison parameters to increase the conversion rate.</p>
+<p>• Worked on optimizing page load time for a better user experience.</p>
             </div>
 
             <div class="job job-3">
