--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                 <h4>Apr 2020 – Present</h4>
                 <a href="https://groceries.asda.com/">ASDA Groceries: An online grocery shopping platform</a>
                 <p>• Working on website’s performance optimisation, accessibility, code smells, test coverage and deployments.</p>
-<p>• Leadthedevelopmentoftheofferspageanddeliverypassfunctionality-which provides the same day delivery, early access to the home delivery slots and guaranteed savings.</p>
+<p>• Lead the development of theo ffers page and delivery pass functionality-which provides the same day delivery, early access to the home delivery slots and guaranteed savings.</p>
 <p>• Redesigned existing user interface, web application architecture in ReactJs, HTML and CSS/SASS.</p>
       <p>      • Worked on the integration of Adobe/Omniture analytics.</p>
    <p>     • Integrated multiple website pages/modules to new CMS tool.</p>
