--- a/index.html
+++ b/index.html
@@ -27,6 +27,15 @@
     <link rel="stylesheet" href="assets/css/businesscard.css">
     <link rel="stylesheet" href="assets/css/main.css">
     <title>Dhruvi Makvana</title>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-X6K790X5MG"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-X6K790X5MG');
+    </script>
 </head>
 
 <body id="bg-image">
