Mail and URL changes

--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
     <meta name="keyword" content="professional web designer">
     <meta property="og:title" content="Dhruvi Makvana | Web Developer"/>
     <meta property="og:description" content="Making Web AWESOME!" />
-    <meta property="og:image" content="http://makd.me/assets/img/businesscard.png"/>
-    <meta property="og:url" content="http://makd.me" />
+    <meta property="og:image" content="http://makd.dev/assets/img/businesscard.png"/>
+    <meta property="og:url" content="http://makd.dev" />
     <meta property="og:type" content="website" />
-    <link rel="canonical" href="http://makd.me"/>
+    <link rel="canonical" href="http://makd.dev"/>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
         crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/businesscard.css">
@@ -59,7 +59,7 @@
             <a href="https://github.com/dhruvimak" target="_blank">
                 <i class="fab fa-github fa-2x"></i>
             </a>
-            <a href="mailto:dhruvipmakavana@yahoo.com" target="_blank">
+            <a href="mailto:makd.dev@gmail.com" target="_blank">
                 <i class="far fa-envelope fa-2x"></i>
             </a>
             <a href="https://stackoverflow.com/users/10118050/dhruvi-makvana" target="_blank">
@@ -203,8 +203,8 @@
               </div>
               <div class="card-back">
                 <h3 class="h3 contact-info"><a><i class="fas fa-phone-square">&nbsp;</i>+91 87349 43662</a></h3>
-                <h3 class="h3 contact-info"><a href="http://makd.me"><i class="fas fa-link">&nbsp;</i>makd.com</a></h3>
-                <h3 class="h3 contact-info"><a href="mailto:dhruvipmakavana@yahoo.com"><i class="fas fa-envelope"></i>&nbsp;dhruvipmakavana@yahoo.com</a></h3>
+                <h3 class="h3 contact-info"><a href="http://makd.dev"><i class="fas fa-link">&nbsp;</i>makd.com</a></h3>
+                <h3 class="h3 contact-info"><a href="mailto:makd.dev@gmail.com"><i class="fas fa-envelope"></i>&nbsp;makd.dev@gmai.com</a></h3>
                 <h3 class="h3 contact-info"><a><i class="fas fa-map-marker-alt"></i>&nbsp;Bangalore, India</a></h3>
               </div>
             </div> 
