--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="description" content="React developer, Web Developer">
-    <meta name="keyword" content="Makvana Dhruvi, Dhruvi Makvana, Makd, Makavana, Dhruvi, Makwana">
-    <meta name="keyword" content="portfolio, javascript, developer">
+    <meta name="keyword" content="Makvana Dhruvi, Dhruvi Makvana, Makd, Makavana, Dhruvi, Makwana, dhruvi makavana, dhruvi makwana, druvi makwana, makd.dev">
+    <meta name="keyword" content="portfolio, javascript, developer,walmart developer">
     <meta name="keyword" content="web design and developments services">
     <meta name="keyword" content="custom web design services">
     <meta name="keyword" content="web design services">
@@ -18,10 +18,10 @@
     <meta name="keyword" content="professional web designer">
     <meta property="og:title" content="Dhruvi Makvana | Web Developer"/>
     <meta property="og:description" content="Making Web AWESOME!" />
-    <meta property="og:image" content="http://makd.dev/assets/img/businesscard.png"/>
-    <meta property="og:url" content="http://makd.dev" />
+    <meta property="og:image" content="https://makd.dev/assets/img/businesscard.png"/>
+    <meta property="og:url" content="https://makd.dev" />
     <meta property="og:type" content="website" />
-    <link rel="canonical" href="http://makd.dev"/>
+    <link rel="canonical" href="http://makd.dev/"/>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
         crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/businesscard.css">
@@ -203,7 +203,7 @@
               </div>
               <div class="card-back">
                 <h3 class="h3 contact-info"><a><i class="fas fa-phone-square">&nbsp;</i>+91 87349 43662</a></h3>
-                <h3 class="h3 contact-info"><a href="http://makd.dev"><i class="fas fa-link">&nbsp;</i>makd.com</a></h3>
+                <h3 class="h3 contact-info"><a href="http://makd.dev"><i class="fas fa-link">&nbsp;</i>makd.dev</a></h3>
                 <h3 class="h3 contact-info"><a href="mailto:makd.dev@gmail.com"><i class="fas fa-envelope"></i>&nbsp;makd.dev@gmai.com</a></h3>
                 <h3 class="h3 contact-info"><a><i class="fas fa-map-marker-alt"></i>&nbsp;Bangalore, India</a></h3>
               </div>
