--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <meta property="og:image" content="https://makd.dev/assets/img/businesscard.png"/>
     <meta property="og:url" content="https://makd.dev" />
     <meta property="og:type" content="website" />
+    <link rel="icon" href="https://makd.dev/assets/img/businesscard.png">
     <link rel="canonical" href="http://makd.dev/"/>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
         crossorigin="anonymous">
