--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
               </div>
               <div class="card-back">
                 <h3 class="h3 contact-info"><a><i class="fas fa-phone-square">&nbsp;</i>+91 87349 43662</a></h3>
-                <h3 class="h3 contact-info"><a href="http://makd.dev"><i class="fas fa-link">&nbsp;</i>makd.dev</a></h3>
+                <h3 class="h3 contact-info"><a href="https://makd.dev"><i class="fas fa-link">&nbsp;</i>makd.dev</a></h3>
                 <h3 class="h3 contact-info"><a href="mailto:makd.dev@gmail.com"><i class="fas fa-envelope"></i>&nbsp;makd.dev@gmai.com</a></h3>
                 <h3 class="h3 contact-info"><a><i class="fas fa-map-marker-alt"></i>&nbsp;Bangalore, India</a></h3>
               </div>
